--- a/public/fonts/LexendDeca/LexendDeca.css
+++ b/public/fonts/LexendDeca/LexendDeca.css
@@ -2,7 +2,7 @@
 @supports (font-variation-settings: normal) {
   @font-face {
     font-family: "Lexend Deca";
-    src: url("LexendDeca-VariableFont_wght.ttf") format("truetype");
+    src: url("./LexendDeca-VariableFont_wght.ttf") format("truetype");
     font-weight: 100 900;
     font-style: swap;
   }
