--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,5 @@
 ---
-import { t } from "i18next";
 import { getPathnameWithoutLocale } from "utils/url";
-import { localizePath } from "astro-i18next";
 
 type NavLink = {
   href: string;
@@ -9,9 +7,9 @@ type NavLink = {
 };
 
 const LINKS: NavLink[] = [
-  { href: localizePath("/"), label: `${t("nav.home")}` },
-  { href: localizePath("/about"), label: t("nav.about") },
-  { href: localizePath("/blog"), label: t("nav.blog") },
+  { href: "/", label: "Home" },
+  { href: "/about", label: "About" },
+  { href: "/blog", label: "Blog" },
   // { href: localizePath("/bookshelf"), label: t("nav.bookshelf") },
 ];
 
@@ -21,13 +19,29 @@ const pathname = getPathnameWithoutLocale(Astro.request.url);
 
 <header>
   <nav>
-    {
-      LINKS.map(({ href, label }) => (
-        <a href={href} aria-current={href === pathname ? "page" : undefined}>
-          {label}
-        </a>
-      ))
-    }
+    <a href="/">
+      <picture>
+        <source
+          srcset="/images/logo_dark.png"
+          media="(prefers-color-scheme: dark)"
+        />
+        <img
+          src="/images/logo.png"
+          alt="albertus.dev logo"
+          width="32"
+          height="32"
+        />
+      </picture>
+    </a>
+    <div>
+      {
+        LINKS.map(({ href, label }) => (
+          <a href={href} aria-current={href === pathname ? "page" : undefined}>
+            {label}
+          </a>
+        ))
+      }
+    </div>
   </nav>
   <hr />
 </header>
@@ -47,9 +61,18 @@ const pathname = getPathnameWithoutLocale(Astro.request.url);
   }
   nav {
     display: flex;
-    gap: 0.5rem;
     align-items: center;
     padding: 0.5rem 0;
+    justify-content: space-between;
+  }
+  nav > div {
+    display: flex;
+    gap: 0.75rem;
+  }
+  img {
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
   }
   nav > a[aria-current="page"] {
     font-weight: bold;
