--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ type NavLink = {
 const LINKS: NavLink[] = [
   { href: "/", label: "Home" },
   { href: "/about", label: "About" },
-  { href: "/blog", label: "Blog" },
+  { href: "/posts", label: "Posts" },
   // { href: localizePath("/bookshelf"), label: t("nav.bookshelf") },
 ];
 
